# terminal-typeracer

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/: data.txt
src/: main.c
